kubernetes/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chuck
  name: chuck
  namespace: chuck
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chuck
  strategy: {}
  template:
    metadata:
      labels:
        app: chuck
    spec:
      containers:
      - image: __IMAGE_URI__
        name: chuck
        ports:
        - containerPort: 5000
        resources: {}
