kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chuck
  name: chuck
  namespace: chuck
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: chuck
