kubernetes/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-chuck
  namespace: chuck
spec:
  rules:
  - host: "chuck.tfcsummit.douglasramiro.me"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chuck
            port:
              number: 80
